[workspace]
members = ["weighting-config", "create-config-account", "push-new-weight-config"]
resolver = "2"

[workspace.dependencies]
bincode = "1.3.3"
log = "0.4.27"
serde = "1.0.219" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_derive = "1.0.219" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.140"
solana-account-info = "2.3.0"
solana-program = "2.3.0"
