[package]
name = "create-config-account"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-client = "2.2.0"
solana-keypair = "2.2.0"
solana-signer = "2.2.0"
solana-signature = "2.2.0"
solana-transaction = "2.2.0"
solana-pubkey = "2.2.0"
solana-system-interface = "1.0"
solana-account-info = { workspace = true }

[[bin]]
name = "create-config-account"
path = "src/main.rs"