[package]
name = "push-new-weight-config"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
clap = { version = "4.5.41", features = ["derive"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-client = "2.2.0"
solana-instruction = "2.2.0"
solana-keypair = "2.2.0"
solana-signer = "2.2.0"
solana-signature = "2.2.0"
solana-transaction = "2.2.0"
solana-program = "2.2.0"
solana-pubkey = "2.2.0"
solana-system-interface = "1.0"
solana-account-info = { workspace = true }
solana-commitment-config = "2.2.0"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "push-new-weight-config"
path = "src/main.rs"