[package]
name = "weighting-config"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-account-info = { workspace = true }

[[bin]]
name = "weighting-config"
path = "src/main.rs"